# qdrant_protein_embs

./: .gitignore  README.md  pyproject.toml
notebooks/: 20230601.ipynb
