
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "dlnp2", email = "hideta7.dev@gmail.com"},
]
dependencies = [
    "h5py>=3.8.0",
    "qdrant-client>=0.11.9",
    "biotite>=0.37.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "jupyterlab>=4.0.1",
    "black>=23.3.0",
    "isort>=5.12.0",
]
